--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head><meta content="text/html; charset=windows-1257" http-equiv="content-type"><title>Labas pasauli!</title></head><body>
+<html><head>
   
-<p>Pirmas</p>
+  <meta content="text/html; charset=utf-8" http-equiv="content-type">
+  <title>Labas pasauli!</title>
+
+  
+</head><body>
+<p style="color: rgb(204, 102, 204);">Pirmas</p>
+
 <ul>
+
   <li>viens</li>
   <li>du</li>
   <li>trys<br>
   </li>
 </ul>
+
 <br>
+
 <br>
 
 </body></html>
