--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <title>Labas pasauli!</title>
-
+                  <link
   
 </head><body>
 <p style="color: rgb(204, 102, 204);">Pirmas</p>
