--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
+<html>
+<head>
   
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
-  <title>Labas pasauli!</title>
+  <title></title>
     <link rel="stylesheet" href="style.css"/>
   
-</head><body>
+</head>
+<body>
 
 
-</body></html>
+</body>
+</html>
