--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
-  <title></title>
+  <title>Board freak</title>
     <link rel="stylesheet" href="style.css"/>
   
 </head>
 <body>
-
+       <dic
 
 </body>
 </html>
