--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   
 </head>
 <body>
+       <div id="header"></div>
        <div id="base"></div>
-       <div></div>
-       <div></div>
+
+       <div id="footer"></div>
 </body>
 </html>
