--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
        <div id="header"></div>
        <div id="base"></div>
-       <div id=""
+       <div id="middle"></div>
        <div id="footer"></div>
 </body>
 </html>
