--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   
 </head>
 <body>
-       <div id="header"></div>
+       <div id="header">
+           <div class=       </div>
        <div id="base"></div>
        <div id="middle"></div>
        <div id="footer"></div>
