--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
        <div id="header">
-           <div class=       </div>
+           <div class=""
+                        </div>
        <div id="base"></div>
        <div id="middle"></div>
        <div id="footer"></div>
