/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
        <div id="header">
-           <div class=""
-                        </div>
+           <div class="menu"><p>Snowboards</p></div>
+           <div class="menu"><p>Lonboards</p></div>
+           <div class="menu"><p>Skateboards</p></div>
+           <div class="menu"><p>Wakeboards</p></div>
+       </div>
        <div id="base"></div>
        <div id="middle"></div>
        <div id="footer"></div>
