--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
        <div id="header">
-           <div class="menu"><p>Snowboards</p></div>
-           <div class="menu"><p>Lonboards</p></div>
-           <div class="menu"><p>Skateboards</p></div>
-           <div class="menu"><p>Wakeboards</p></div>
+           <nav>Snowboards</nav>
+           <nav>Skateboards</nav>
+           <nav>Longboards</nav>
+           <nav>Wakeboards</nav>
        </div>
        <div id="base"></div>
        <div id="middle"></div>
