/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
        <div id="header">
-           <nav>Snowboards</nav>
-           <nav>Skateboards</nav>
-           <nav>Longboards</nav>
-           <nav>Wakeboards</nav>
+           <nav>
+               <a href="/html/">HTML</a> |
+               <a href="/css/">CSS</a> |
+               <a href="/js/">JavaScript</a> |
+               <a href="/jquery/">jQuery</a>
+           </nav>
        </div>
        <div id="base"></div>
        <div id="middle"></div>
