--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
        <div id="header">
            <nav>
-               <a href="/html/">HTML</a> |
-               <a href="/css/">CSS</a> |
-               <a href="/js/">JavaScript</a> |
-               <a href="/jquery/">jQuery</a>
+               <a href="">Snowboards</a>
+               <a href="">Skateboards</a>
+               <a href="">Longboards</a>
+               <a href="">Wakeboards</a>
            </nav>
        </div>
        <div id="base"></div>
