--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
   
 </head>
 <body>
-       <div id="header">
-           <nav>
-               <a href="">Snowboards</a>
-               <a href="">Skateboards</a>
-               <a href="">Longboards</a>
-               <a href="">Wakeboards</a>
-           </nav>
+
+       <div id="base">
+
        </div>
-       <div id="base"></div>
        <div id="middle"></div>
        <div id="footer"></div>
 </body>
