--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   
 </head>
 <body>
-
-       <div id="base">
-
+        <div id="base">
+           <div id="header">
+               <nav>
+                   <a href="">Snowboards</a>
+                   <a href="">Skateboards</a>
+                   <a href="">Longboards</a>
+                   <a href="">Wakeboards</a>
+               </nav>
+           </div>
        </div>
        <div id="middle"></div>
        <div id="footer"></div>
