/ ‘.idea/workspace.xml’ / ‘index.html’ / ‘style.css’

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
            </div>
        </div>
        <div id="middle"></div>
-       <div id="footer"></div>
+       <div id="footer"><p>Let's connect!</p></div>
 </body>
 </html>
