--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                    <a href="">Wakeboards</a>
                </nav>
            </div>
+            <div id="footer"><p>Let's connect!</p></div>
        </div>
-       <div id="middle"></div>
+
 
 </body>
 </html>
