--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                    <a href="">Wakeboards</a>
                </nav>
            </div>
+            <div id="middle"></div>
             <div id="footer"><p>Let's connect!</p></div>
        </div>
 
