--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-         <header></header>
+         <header>
+             <div class=""
+
+         </header>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
