--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <!-- Add your site or application content here -->
          <header>
              <div class="container"></div>
-        /header>
+        </header>
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
