--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
              <div class="container"></div>
         </header>
         <section>
-            <div class=""
+            <div class="container"></div>
         </section>
-
+        <
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
