/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
         <!-- Add your site or application content here -->
          <header>
-             <div class="container"></div>
+             <div class="container">Header</div>
         </header>
         <section>
-            <div class="container"></div>
+            <div class="container">Section</div>
         </section>
         <footer>
-            <div class="container">
+            <div class="container">Footer</div>
         </footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
