--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
              <div class="container">Header</div>
         </header>
         <section>
-            <div class="container">Section</div>
+            <div class="container">
+                <i class="icon-list-bullet"></i>
+            </div>
         </section>
         <footer>
             <div class="container">Footer</div>
