--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!-- Add your site or application content here -->
          <header>
              <div class="container">Header</div>
+             <div class=""
         </header>
         <section>
             <div class="container">
@@ -31,7 +32,7 @@
             </div>
         </section>
         <footer>
-            <div class="container">Footer</div>
+            <div class="container">2013-09-13</div>
         </footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
