--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Add your site or application content here -->
          <header>
              <div class="container">Header</div>
-             <div class=""
+             <div class="logo"><a href="index.html"></div>
         </header>
         <section>
             <div class="container">
