--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
         <!-- Add your site or application content here -->
          <header>
-             <div class="container">Header</div>
-             <div class="logo"><a href="index.html">Arbatinukas</a></div>
+             <div class="container"> <div class="logo"><a href="index.html">Arbatinukas</a></div></div>
+
         </header>
         <section>
             <div class="container">
-                <i class="icon-list-bullet"></i>
+                <h1></h1>
             </div>
         </section>
         <footer>
