--- a/productcard.html
+++ b/productcard.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <h1>List of pages</h1>
                 <ul>
-                    <li> <a href=""></a></li>
+                    <li> <a href="productcard.html">Product Card</a></li>
                 </ul>
             </div>
         </section>
