/ ‘.idea/workspace.xml’ / ‘productcard.html’

--- a/productcard.html
+++ b/productcard.html
@@ -28,7 +28,7 @@
         </header>
         <section>
             <div class="container">
-                <h1>List of pages</h1>
+                <h1><i class:icon-list-bullet></i>List of pages</h1>
                 <ul>
                     <li> <a href="productcard.html">Product Card</a></li>
                 </ul>
