/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </header>
         <section>
             <div class="container">
-                <h1>List of pages</h1>
+                <h1 <i class="icon-list-bullet"></i>List of pages</h1>
                 <ul>
-                    <li> <a href=""></a></li>
+                    <li> <a href="productcard.html"></a></li>
                 </ul>
             </div>
         </section>
