--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <h1 <i class="icon-list-bullet"></i>List of pages</h1>
                 <ul>
-                    <li> <a href="productcard.html"></a></li>
+                    <li> <a href="productcard.html"></a>Product Card</li>
                 </ul>
             </div>
         </section>
