/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
             <li><a href="productcard.html">Product Card</a></li>
         </ul>
     </div>
-
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
