--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <span></span>
         <span></span>
     </div>
+    <div class="wrapper">
+        <div class="ribbon-wrapper-green"><div class="ribbon-green">NEWS</div></div>
+    </div>
 </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
