--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <ul>
             <li><a href="productcard.html">Product Card</a></li>
         </ul>
+    <div><p>To be continued...</p></div>
     </div>
     <div class="loader">
         <span></span>
