/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <span></span>
     </div>
     <div class="wrapper">
+        <p>liau liau</p>
         <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
     </div>
 </section>
