/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <div class="wrapper">
         <p>liau liau</p>
         <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+        <p>pim pirim</p>
     </div>
 </section>
 
