--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="wrapper">
 
         <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
-        <p>pim pirim</p>tfritfgvklhu
+        <p>pim pirim</p>
     </div>
 </section>
 
