/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -59,7 +59,17 @@
         <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
         <p>pim pirim</p> ihyluigpo;h
     </div>
+    <section id="menu">
 
+        <input type="button" id="menu-button" value="Menu" />
+
+        <ul id="menu-options">
+            <li>Option 1</li>
+            <li>Option 2</li>
+            <li>Option 3</li>
+        </ul>
+
+    </section>
 </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
