--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <header>
     <div class="container">
         <div class="logo"><a href="index.html">Arbatinukas</a></div>
-        <nav>
+        <nav id="menu">
             <ul>
                 <li><a href="#">Menu item</a></li>
                 <li><a href="" class="active">Menu item2</a></li>
@@ -59,17 +59,7 @@
         <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
         <p>pim pirim</p> ihyluigpo;h
     </div>
-    <section id="menu">
 
-        <input type="button" id="menu-button" value="Menu" />
-
-        <ul id="menu-options">
-            <li>Option 1</li>
-            <li>Option 2</li>
-            <li>Option 3</li>
-        </ul>
-
-    </section>
 </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
