/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="container">
         <div class="logo"><a href="index.html">Arbatinukas</a></div>
         <nav id="menu">
+            <input type="button" id="menu-button" value="Menu">
             <ul>
                 <li><a href="#">Menu item</a></li>
                 <li><a href="" class="active">Menu item2</a></li>
