--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 <header>
     <div class="container">
         <div class="logo"><a href="index.html">Arbatinukas</a></div>
-        <nav id="menu">
-            <input type="button" id="menu-button" value="Menu">
+        <nav>
             <ul>
                 <li><a href="#">Menu item</a></li>
                 <li><a href="" class="active">Menu item2</a></li>
