/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <div class="wrapper">
 
         <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
-        <p>pim pirim</p> ihyluigpo;h
+        <div id="product"><img src="" </div>
+        <div id="name"></div>
+        <div id="date"></div>
     </div>
 
 </section>
