--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <div class="wrapper">
 
         <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
-        <div id="product"><img src="" </div>
+        <div id="product"><img src=""/> </div>
         <div id="name"></div>
-        <div id="date"></div>
+        <div id="exparation-date"></div>
     </div>
 
 </section>
