/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="wrapper">
 
         <div class="ribbon-wrapper-green"><div class="ribbon-green">-30%</div></div>
-        <div id="product"><img src="http://d3fw2npyikgnrg.cloudfront.net/s3/priceon-images/promo-offer-images/82924342-4cf7-4051-86a5-a5d8b828ed54.png?maxheight=280&maxwidth=220"/> </div>
+        <div id="product"><img src="http://d3fw2npyikgnrg.cloudfront.net/s3/priceon-images/promo-offer-images/82924342-4cf7-4051-86a5-a5d8b828ed54.png?maxheight=280&maxwidth=220"> </div>
         <div id="name"></div>
         <div id="exparation-date"></div>
     </div>
