/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
         <div class="ribbon-wrapper-green"><div class="ribbon-green">-30%</div></div>
         <div id="product"><img src="http://d3fw2npyikgnrg.cloudfront.net/s3/priceon-images/promo-offer-images/82924342-4cf7-4051-86a5-a5d8b828ed54.png?maxheight=280&maxwidth=220"> </div>
-        <div id="name">-30% LIPTON arbatoms</div>
-        <div id="exparation-date"> iki rugsėjo 25 d.</div>
+        <div id="name"><p>-30% LIPTON arbatoms</p></div>
+        <div id="exparation-date"><p>iki rugsėjo 25 d.</p></div>
     </div>
 
 </section>
