--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span></span>
     </div>
     <div class="wrapper">
-        <div class="ribbon-wrapper-green"><div class="ribbon-green">-30%</div></div>
+        <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
     </div>
 
 </section>
