/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- Add your site or application content here -->
 <header>
     <div class="container">
-        <div class="logo" style="position:relative; min-height: 100%; top: 0px;"><a href="index.html">Arbatinukas</a></div>
+        <div class="logo"><a href="index.html">Arbatinukas</a></div>
         <nav>
             <ul>
                 <li><a href="#">Menu item</a></li>
