/ ‘.idea/workspace.xml’ / ‘productcard.html’

--- a/productcard.html
+++ b/productcard.html
@@ -23,7 +23,15 @@
 
         <!-- Add your site or application content here -->
          <header>
-             <div class="container"> <div class="logo"><a href="index.html">Arbatinukas</a></div></div>
+             <div class="container"> <div class="logo"><a href="index.html">Arbatinukas</a></div>
+                 <nav>
+                     <ul>
+                         <li><a href="#">Menu item</a></li>
+                         <li><a href="" class="active">Menu item2</a></li>
+
+                     </ul>
+                 </nav>
+             </div>
 
         </header>
         <section>
