--- a/productcard.html
+++ b/productcard.html
@@ -40,7 +40,9 @@
                 <ul>
                     <li> <a href="productcard.html">Product Card</a></li>
                 </ul>
-            </div>
+                <div class="wrapper">
+                    <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+                </div>
         </section>
         <footer>
             <div class="container">2013-09-13</div>
