/ ‘.idea/workspace.xml’ / ‘productcard.html’

--- a/productcard.html
+++ b/productcard.html
@@ -41,6 +41,9 @@
                     <li> <a href="productcard.html">Product Card</a></li>
                 </ul>
             </div>
+            <div>
+                kazkas kazkas
+            </div>
         </section>
         <footer>
             <div class="container">2013-09-13</div>
