--- a/productcard.html
+++ b/productcard.html
@@ -42,7 +42,9 @@
                 </ul>
             </div>
             <div>
-                kazkas kazkas
+                <div class="wrapper">
+                    <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+                </div>
             </div>
         </section>
         <footer>
