--- a/productcard.html
+++ b/productcard.html
@@ -44,6 +44,30 @@
             <div class="wrapper">
                     <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
+            <div class="wrapper">
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
+            <div class="wrapper">
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
+            <div class="wrapper">
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
+            <div class="wrapper">
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
+            <div class="wrapper">
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
+            <div class="wrapper">
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
+            <div class="wrapper">
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
+            <div class="wrapper">
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
 
         </section>
         <footer>
