/ ‘.idea/workspace.xml’ / ‘productcard.html’

--- a/productcard.html
+++ b/productcard.html
@@ -41,31 +41,31 @@
                     <li> <a href="productcard.html">Product Card</a></li>
                 </ul>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                     <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
-            <div class="wrapper">
+            <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
 
