--- a/productcard.html
+++ b/productcard.html
@@ -41,6 +41,7 @@
                     <li> <a href="productcard.html">Product Card</a></li>
                 </ul>
             </div>
+            <div class="container">
             <div class="wrapper2">
                     <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
@@ -64,6 +65,7 @@
             </div>
             <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+            </div>
             </div>
         </section>
         <footer>
