--- a/productcard.html
+++ b/productcard.html
@@ -41,7 +41,7 @@
                     <li> <a href="productcard.html">Product Card</a></li>
                 </ul>
             </div>
-            <div class="container">
+            <div class="products">
             <div class="wrapper2">
                     <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
