/ ‘.idea/workspace.xml’ / ‘productcard.html’

--- a/productcard.html
+++ b/productcard.html
@@ -37,22 +37,22 @@
         <section>
             <div class="products">
             <div class="wrapper2">
-                    <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+                    <div class="ribbon-wrapper-green"><div class="ribbon-green">-30%</div></div>
             </div>
             <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
             </div>
             <div class="wrapper2">
-                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">-20%</div></div>
             </div>
             <div class="wrapper2">
-                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">2.99</div></div>
             </div>
             <div class="wrapper2">
-                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">9.49</div></div>
             </div>
             <div class="wrapper2">
-                <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
+                <div class="ribbon-wrapper-green"><div class="ribbon-green">-15%</div></div>
             </div>
             <div class="wrapper2">
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">Akcija</div></div>
