/ ‘.idea/workspace.xml’ / ‘index.html’

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <ul>
             <li><a href="productcard.html">Product Card</a></li>
         </ul>
+        <li><a href="userlist.html">User list</a></li>
     </div>
     <div class="loader">
         <span></span>
