--- a/userlist.html
+++ b/userlist.html
@@ -43,7 +43,9 @@
 
 </header>
 <section>
+    <div class="container">
 
+    </div>
 </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
