--- a/userlist.html
+++ b/userlist.html
@@ -43,9 +43,9 @@
 
 </header>
 <section>
-    <div class="list">
+    <form>
 
-    </div>
+    </form>
 </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
