/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -44,7 +44,9 @@
 </header>
 <section>
     <form>
-
+       <header></header>
+       <content></content>
+        <footer></footer>
     </form>
 </section>
 
