/ ‘.idea/workspace.xml’ / ‘css/main.css’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -45,7 +45,7 @@
 <section>
     <form>
        <header>
-           <p>Edit List</p>
+           <p><strong>Edit List</strong></p>
        </header>
        <content></content>
         <footer></footer>
