/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -47,7 +47,10 @@
        <header>
            <p><strong>Edit List</strong></p>
        </header>
-       <content></content>
+       <content>
+           <label for="Name">Click me</label>
+           <input type="text" id="Name" name="Name" />
+       </content>
         <footer></footer>
     </form>
 </section>
