/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -48,8 +48,8 @@
            <p><strong>Edit List</strong></p>
        </header>
        <content>
-           <label for="Name">Click me</label>
-           <input type="text" id="Name" name="Name" />
+           <label for="list_name">LIST NAME</label>
+           <input type="text" id="list_name" name="Name" />
        </content>
         <footer></footer>
     </form>
