/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -48,8 +48,10 @@
            <p><strong>Edit List</strong></p>
        </header>
        <content>
-           <label for="list_name">LIST NAME</label>
-           <input type="text" id="list_name" name="Name" />
+           <div>
+               <label for="list_name">LIST NAME</label>
+               <input type="text" id="list_name" name="Name" />
+           </div>
        </content>
         <footer></footer>
     </form>
