--- a/userlist.html
+++ b/userlist.html
@@ -50,7 +50,7 @@
        <content>
            <div>
                <label for="list_name">LIST NAME</label>
-               <input type="text" id="list_name" name="list_name" />
+               <input type="text" id="list_name" name="list" />
            </div>
        </content>
         <footer></footer>
