/ ‘.idea/workspace.xml’ / ‘css/main.css’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -48,7 +48,7 @@
            <p><strong>Edit List</strong></p>
        </header>
        <content>
-           <div>
+           <div class="field">
                <label for="list_name">LIST NAME</label>
                <input type="text" id="list_name" name="list" />
            </div>
