/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -39,9 +39,8 @@
         </nav>
 
     </div>
-
-
 </header>
+<div id=""
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
