--- a/userlist.html
+++ b/userlist.html
@@ -40,7 +40,9 @@
 
     </div>
 </header>
-<div id=""
+<div id="list">
+
+</div>
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
