/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -42,7 +42,7 @@
 </header>
 <div id="list">
     <header>
-        <p>Edit list</p>
+        <p><strong>Edit list</strong></p>
     </header>
 </div>
 
