/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -46,7 +46,8 @@
     </header>
     <div>
         <form>
-            <label for=""></label>
+            <label for="list_name"></label>
+            <input type="text" id="list_name"
         </form>
 
     </div>
