--- a/userlist.html
+++ b/userlist.html
@@ -46,7 +46,7 @@
     </header>
     <div>
         <form>
-            <label for="list_name"></label>
+            <label for="list_name">LIST NAME</label>
             <input type="text" id="list_name"
         </form>
 
