--- a/userlist.html
+++ b/userlist.html
@@ -47,7 +47,7 @@
     <div>
         <form>
             <label for="list_name">LIST NAME</label>
-            <input type="text" id="list_name"
+            <input type="text" id="list_name">
         </form>
 
     </div>
