/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -46,8 +46,8 @@
     </header>
     <div>
         <form>
-            <label for="list_name">LIST NAME</label>
-            <input type="text" id="list_name">
+            <label for="list-name">LIST NAME</label>
+            <input type="text" maxlength="128" id="list-name">
         </form>
 
     </div>
