/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -47,7 +47,7 @@
     <div>
         <form>
             <label for="list-name">LIST NAME</label>
-            <input type="text" maxlength="128" id="list-name" placeholder="Shoppin List">
+            <input type="text" maxlength="128" id="list-name" placeholder="Shopping List">
         </form>
 
     </div>
