--- a/userlist.html
+++ b/userlist.html
@@ -47,7 +47,7 @@
     <div>
         <form>
             <label for="list-name">LIST NAME</label>
-            <input type="text" maxlength="128" id="list-name" placeholder="Shopping List">
+            <input type="text" maxlength="128" id="list-name" placeholder="Shopping List" style="width:100px; height:40px;">
         </form>
 
     </div>
