/ ‘.idea/workspace.xml’ / ‘css/main.css’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -48,6 +48,8 @@
         <form>
             <label for="list-name">LIST NAME</label>
             <input type="text" maxlength="128" id="list-name" placeholder="Shopping List" style="height:25px;">
+            <label for="list-name">LIST NAME</label>
+            <input type="text" maxlength="128" id="list-name" placeholder="Shopping List" style="height:25px;">
         </form>
 
     </div>
