/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -48,8 +48,8 @@
         <form>
             <label for="list-name">LIST NAME</label>
             <input type="text" maxlength="128" id="list-name" placeholder="Shopping List" style="height:25px;">
-            <label for="list-name">LIST NAME</label>
-            <input type="text" maxlength="128" id="list-name" placeholder="Shopping List" style="height:25px;">
+            <label for="description">DESCRIPTION</label>
+            <input type="text" maxlength="128" id="description" placeholder="Shopping List" style="height:50px;">
         </form>
 
     </div>
