/ ‘.idea/workspace.xml’ / ‘userlist.html’

--- a/userlist.html
+++ b/userlist.html
@@ -49,7 +49,7 @@
             <label for="list-name">LIST NAME</label>
             <input type="text" maxlength="128" id="list-name" placeholder="Shopping List" style="height:25px;">
             <label for="description">DESCRIPTION</label>
-            <textarea id="description" placeholder="Some kinda list description" style="height:50px;">
+            <textarea id="description" placeholder="Some kinda list description" rows="10">
         </form>
 
     </div>
